# Page-loader

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
page_loader/: constants.py  file_saver.py  filename_changer.py  html_changer.py  http_request.py  image_loader.py  logger_config.py  network.py  page_downloader.py  page_loader.py  storage.py
page_loader/scripts/: cli.py
tests/: test_file_saver.py  test_filename_changer.py  test_html_changer.py  test_http_request.py  test_image_loader.py  test_logger_config.py  test_network.py  test_page_loader.py  test_storage.py
tests/fixtures/: before.html
