[tool.poetry]
name = "sadlaboka-page-loader"
version = "0.1.0"
description = ""
authors = ["SadLaboka <jitubuh@gmail.com>"]
license = "MIT"
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
alive-progress = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipython = "^8.2.0"
flake8 = "^4.0.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
